--- a/testlayout001.glade
+++ b/testlayout001.glade
@@ -79,7 +79,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkScrolledWindow">
+              <object class="GtkScrolledWindow" id="right_panel_chat_scrolled">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="vexpand">True</property>
@@ -87,11 +87,11 @@
                 <property name="min_content_width">250</property>
                 <property name="propagate_natural_width">True</property>
                 <child>
-                  <object class="GtkViewport">
+                  <object class="GtkViewport" id="right_panel_chat_viewport">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkListBox">
+                      <object class="GtkListBox" id="messages_listbox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                       </object>
